--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,19 @@
+@import url(/stylesheets/fisma.css);
+@import url(/stylesheets/layout.css);
+@import url(/stylesheets/menu.css);
+
+/* Color
+===================================*/
+
+/* Typography
+===================================*/
+
+/* Positioning
+===================================*/
+
+/* Tables
+===================================*/
+
 /* Body Stylesheet */
 body {
 	margin: 0px;
