--- a/public/stylesheets/fisma.css
+++ b/public/stylesheets/fisma.css
@@ -89,3 +89,9 @@ div.barright {
     font-weight: normal;
     font-size: 12px;
 }
+
+#msgbar {
+    background-color:#FFF1A8;
+    text-height:2.5em;
+    padding:0.5em 1em;
+}
