--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -66,7 +66,10 @@ td {
 	border-top: 1px solid #BEBEBE;
 }
 
-
+.tbframe td {
+	border-left: 1px solid #BEBEBE;
+	border-top: 1px solid #BEBEBE;
+}
 
 .tipframe {
 	font-family: Tahoma,verdana,arial, helvetica;
