--- a/public/stylesheets/fisma.css
+++ b/public/stylesheets/fisma.css
@@ -95,3 +95,25 @@ div.barright {
     text-height:2.5em;
     padding:0.5em 1em;
 }
+
+div#maskDIV{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #AAAAAA;
+    z-index: 10;
+    filter: alpha(opacity=50);opacity:0.8;
+}
+div#editorDIV{
+    position: absolute;
+    top:2100px;
+    left:300px;
+    right:300px;
+    bottom:100px;
+    background-color: #99FFCC;
+    border:1px solid #99FFCC;
+    z-index: 20;
+}
+
