--- a/public/stylesheets/fisma.css
+++ b/public/stylesheets/fisma.css
@@ -21,13 +21,13 @@ ul.loginfo {
     padding: 0px;
 }
 
-#menu a {
+#menu h2 {
     border-width: 1px;
     border-style: solid;
     border-color: #42637B #888 #42637B #bbb;
 }
 #menu a h2 {
-    font: bold 14px arial, helvetica, sans-serif;
+    font: bold 12px arial, helvetica, sans-serif;
     text-transform: uppercase;
     text-align:center;
     line-height:1.8em;
@@ -36,6 +36,7 @@ ul.loginfo {
 #menu a {
     font: 12px arial, helvetica, sans-serif;
     color: white;
+    line-height:1.4em;
     background: #42637B;
     text-decoration: none;
     border-bottom:1px solid gray;
@@ -86,7 +87,6 @@ div.barright {
 }
 
 #msgbar {
-    background-color:#FFF1A8;
     text-height:2.5em;
     padding:0.5em 1em;
 }
