--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,7 +1,9 @@
 div#menu {
     margin-top:1em;
-    padding-left:12em;
+    background-color:#42637B;
+    height:2.2em;
 }
+
 #menu ul {
     margin:0;
     padding:0;
