--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,3 +1,4 @@
+/* Body Stylesheet Settings */
 body{
     font-family: Tahoma, verdana, arial, helvetica, sans-serif;
     font-weight: normal;
@@ -8,17 +9,14 @@ body{
     padding:0;
 }
 
+/* Top Grey Header */
 div#header{
     position:relative;
     height:60px;
     background-image:url('/images/title_vline.jpg');
 }
-div#container{
-    text-align:left;
-    background-color: #44627A;
-    margin:0;
-    padding:0;
-}
+
+/* Diagonal Lines Graphic */
 div#headbar{
     background-image:url('/images/login_bg.jpg');
     background-repeat: repeat-x;
@@ -26,19 +24,20 @@ div#headbar{
     width:100%;
     text-align:right;
 }
+
+/* Error Messages from Login */
 p.message{
-    padding:0 3em 0 3em;
-    margin:2em 3em 0em 3em;
-    height:1.5em;
+    margin-top: 3em;
+    margin-right: 4em;
     color:#FCB907;
-    font-size:x-small;
     text-align:right;
+    font-weight: bold;
 }
 
+/* Logon Banner in Center of Page */
 p#warning {
-    border:1px solid red;
     font-family: Tahoma,verdana,arial,helvetica,sans-serif;
-    width:30em;
+    width:40em;
     font-size: 12px;
     margin:0 auto;
     padding:10px 10px 10px 10px;
@@ -46,22 +45,26 @@ p#warning {
     background-color: #55758c;
 }
 
+/* Sets Position of Login Fields and Buttons */
 ul#login{
-    text-align:right;
-    margin:0em 4em;
-    float:right;
-    list-style:none;
-    padding:0;
+    text-align: right;
+    margin-right: 4em;
+    float: right;
+    list-style: none;
 }
 
+/* Sets length of input fields */
 ul#login input {
     width:8em;
 }
+
+/* Sets properties for submit button */
 ul#login li.submit input {
-    margin-top:1em;
-    width:auto;
+    margin-top: 1em;
+    width: auto;
 }
 
+/* Sets properties for bottom section of page */
 div#bottom {
     margin-top:3em;
     padding: 0 2em;
