--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -25,6 +25,16 @@ div#headbar{
     text-align:right;
 }
 
+/* Login Graphic */
+div#logingraphic{
+    background-image: url('/images/login_title.gif');
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 42px;
+    margin-top: 1em;
+    margin-right: 3em;
+}
+
 /* Error Messages from Login */
 p.message{
     margin-top: 3em;
@@ -66,7 +76,13 @@ ul#login li.submit input {
 
 /* Sets properties for bottom section of page */
 div#bottom {
-    margin-top:3em;
-    padding: 0 2em;
-    clear:both;
+    margin-top: 3em;
+    margin-left: 3em;
+    margin-right: 3em;
+    height: 60px;
+    background-image:url('/images/line.gif');
+    background-repeat: repeat-x;
+    text-align: right;
+    padding-top: 0.5em;
 }
+
