--- a/public/stylesheets/datepicker.css
+++ b/public/stylesheets/datepicker.css
@@ -196,7 +196,7 @@ img.ui-datepicker-trigger {
 
 .ui-datepicker-cover {
     display: none; /*sorry for IE5*/
-    display/**/: block; /*sorry for IE5*/
+    display: block; /*sorry for IE5*/
     position: absolute; /*must have*/
     z-index: -1; /*must have*/
     filter: mask(); /*must have*/
