--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,5 +1,8 @@
 #top {
-    padding:1em 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
 }
 
 ul.loginfo {
@@ -8,12 +11,15 @@ ul.loginfo {
 }
 
 img#logo {
-    padding:0em;
+    padding: 0em;
 }
 
+/* Sets the margins and padding around the entire page */
 #container {
-    padding: 0 5px;
-    margin: 0 5px;
+    padding-top: 0.5em;
+    padding-right: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.5em;
 }
 
 .button_link {
