--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -48,8 +48,9 @@ th {
 	height: 23px;
 	font-weight: bold;
 	font-size: 12px;
-	background-image: url(../images/td_bg.gif);
-	/* padding-left:inherit */	
+        background-color: #DDDDDD;
+        padding-left: 5px;
+        padding-right: 5px;
 }
 
 /* Table Cell Style Sheet for all td cells */
@@ -71,9 +72,9 @@ td {
 	font-size: 12px;
 	font-weight: normal;
 	color: #000000;
-	border: 1px solid #BEBEBE;
-	border-collapse: collapse;
-    margin:0em auto;
+        border: 1px solid #BEBEBE;
+        border-collapse: collapse;
+        margin: 0em auto;
 }
 
 .tipframe {
