--- a/application/views/scripts/incident/create.phtml
+++ b/application/views/scripts/incident/create.phtml
@@ -4,6 +4,8 @@
                               "MODERATE" => "MODERATE",
                               "HIGH" => "HIGH");
 ?>
-<?php Fisma_Format_Section::startSection("Create An Incident"); ?>
-<?php echo $this->form;?>
+<?php Fisma_Format_Section::startSection("Report An Incident"); ?>
+
+<?php echo $this->form; ?>
+
 <?php Fisma_Format_Section::stopSection(); ?>
