--- a/application/config/form/incident.form
+++ b/application/config/form/incident.form
@@ -18,7 +18,7 @@ elementFilters.tags = "StripTags"
 
 elements.reporter_title.type = "text"
 elements.reporter_title.options.label = "Title"
-elements.reporter_title.options.style = "width:200px"
+elements.reporter_title.options.style = "width:25px"
 displayGroups.reporter.elements.reporter_title = "reporter_title"
 
 elements.reporter_first_name.type = "text"
@@ -34,71 +34,125 @@ displayGroups.reporter.elements.reporter_last_name = "reporter_last_name"
 elements.reporter_organization.type = "text"
 elements.reporter_organization.options.label = "Organization"
 elements.reporter_organization.options.style = "width:400px"
-displayGroups.reporterOrg.elements.reporter_organization = "reporter_organization"
+displayGroups.reporter.elements.reporter_organization = "reporter_organization"
 
 elements.reporter_address1.type = "text"
 elements.reporter_address1.options.label = "Address1"
 elements.reporter_address1.options.style = "width:400px"
-displayGroups.reporterAddress1.elements.reporter_address1 = "reporter_address1"
+displayGroups.reporter.elements.reporter_address1 = "reporter_address1"
 
 elements.reporter_address2.type = "text"
 elements.reporter_address2.options.label = "Address2"
 elements.reporter_address2.options.style = "width:400px"
-displayGroups.reporterAddress2.elements.reporter_address2 = "reporter_address2"
+displayGroups.reporter.elements.reporter_address2 = "reporter_address2"
 
 elements.reporter_city.type = "text"
 elements.reporter_city.options.label = "City"
 elements.reporter_city.options.style = "width:200px"
-displayGroups.reporterCityStateZip.elements.reporter_city = "reporter_city"
+displayGroups.reporter.elements.reporter_city = "reporter_city"
 
-elements.reporter_state.type = "text"
+elements.reporter_state.type = "select"
 elements.reporter_state.options.label = "State"
 elements.reporter_state.options.style = "width:100px"
-displayGroups.reporterCityStateZip.elements.reporter_state = "reporter_state"
+displayGroups.reporter.elements.reporter_state = "reporter_state"
 
 elements.reporter_zip.type = "text"
 elements.reporter_zip.options.label = "Zip"
-elements.reporter_zip.options.style = "width:150px"
-displayGroups.reporterCityStateZip.elements.reporter_zip = "reporter_zip"
+elements.reporter_zip.options.style = "width:75px"
+displayGroups.reporter.elements.reporter_zip = "reporter_zip"
 
 elements.reporter_phone.type = "text"
 elements.reporter_phone.options.label = "Phone"
 elements.reporter_phone.options.style = "width:150px"
-displayGroups.reporterPhone.elements.reporter_phone = "reporter_phone"
+displayGroups.reporter.elements.reporter_phone = "reporter_phone"
 
 elements.reporter_fax.type = "text"
 elements.reporter_fax.options.label = "Fax"
 elements.reporter_fax.options.style = "width:150px"
-displayGroups.reporterFax.elements.reporter_fax = "reporter_fax"
+displayGroups.reporter.elements.reporter_fax = "reporter_fax"
 
 elements.reporter_email.type = "text"
 elements.reporter_email.options.label = "Email"
 elements.reporter_email.options.style = "width:225px"
-displayGroups.reporterEmail.elements.reporter_email = "reporter_email"
+displayGroups.reporter.elements.reporter_email = "reporter_email"
 
-elements.location_building.type = "text"
-elements.location_building.options.label = "Building"
-elements.location_building.options.style = "width:200px"
-displayGroups.locationBuilding.elements.location_building = "location_building"
+elements.assessment_critical.type="select"
+elements.assessment_critical.options.label="Is Incident Critical"
+displayGroups.incident.elements.assessment_critical="assessment_critical"
 
-elements.location_room.type = "text"
-elements.location_room.options.label = "Room"
-elements.location_room.options.style = "width:200px"
-displayGroups.locationRoom.elements.location_room = "location_room"
 
-elements.location_rack.type = "text"
-elements.location_rack.options.label = "Rack"
-elements.location_rack.options.style = "width:200px"
-displayGroups.locationRack.elements.location_rack = "location_rack"
+elements.assessment_sensitivity.type="select"
+elements.assessment_sensitivity.options.label="Incident Sensitivity"
+displayGroups.incident.elements.assessment_sensitivity="assessment_sensitivity"
 
+elements.incident_ts.type = "text"
+elements.incident_ts.options.label = "When did the Incident occur?"
+elements.incident_ts.options.class = "date"
+displayGroups.incident.elements.incident_ts = "incident_ts"
+
+elements.incident_hour.type = "select"
+elements.incident_hour.options.label = "What time did the Incident occur?"
+displayGroups.incident.elements.incident_hour = "incident_hour"
+
+elements.incident_minute.type = "select"
+elements.incident_minute.options.label = "Minute"
+displayGroups.incident.elements.incident_minute = "incident_minute"
+
+elements.incident_ampm.type = "select"
+elements.incident_ampm.options.label = "AM/PM"
+displayGroups.incident.elements.incident_ampm = "incident_ampm"
+
+elements.incident_tz.type = "select"
+elements.incident_tz.options.label = "Timezone"
+displayGroups.incident.elements.incident_tz = "incident_tz"
+
+elements.classification.type = "select"
+elements.classification.options.label = "Incident Classification"
+displayGroups.incident.elements.classification = "classification"
 
 elements.additional_info.type = "textarea"
 elements.additional_info.options.validators.mce.validator = "MceNotEmpty"
-elements.additional_info.options.label = "Enter Description of Incident"
+elements.additional_info.options.label = "Describe the incident"
 elements.additional_info.options.cols = "70%"
 elements.additional_info.options.rows = "7"
 elements.additional_info.options.required = true
-displayGroups.addInfo.elements.additional_info = "additional_info"
+displayGroups.incident.elements.additional_info = "additional_info"
+
+elements.actions_taken.type="textarea"
+elements.actions_taken.options.label="Describe any actions that have been taken"
+elements.actions_taken.options.cols = "70%"
+elements.actions_taken.options.rows = "7"
+displayGroups.incident.elements.actions_taken="actions_taken"
+
+elements.host_name.type="text"
+elements.host_name.options.label="Host Name"
+elements.host_name.options.style="width:200px"
+displayGroups.incident.elements.host_name="host_name"
+
+elements.host_ip.type="text"
+elements.host_ip.options.label="Host IP"
+elements.host_ip.options.style="width:125px"
+displayGroups.incident.elements.host_ip="host_ip"
+
+elements.host_os.type="select"
+elements.host_os.options.label="Host OS"
+displayGroups.incident.elements.host_os="host_os"
+
+elements.host_additional.type="textarea"
+elements.host_additional.options.label="Add additional information about the host"
+elements.host_additional.options.cols = "70%"
+elements.host_additional.options.rows = "7"
+displayGroups.incident.elements.host_additional="host_additional"
+
+elements.pii_involved.type="select"
+elements.pii_involved.options.label="Was PII Involved"
+displayGroups.pii.elements.pii_involved="pii_involved"
+
+
+
+
+
+
 
 elements.save.type = "Form_Button_Submit"
 elements.save.options.value = "Report Incident"
