--- a/application/config/form/irsubcategory.form
+++ b/application/config/form/irsubcategory.form
@@ -6,13 +6,10 @@
 ; Author    Nathan Harris <nathan.harris@endeavorsystems.com>
 ; Copyright (c) Endeavor Systems, Inc. 2008 (http://www.endeavorsystems.com)
 ; License   http://www.openfisma.org/mw/index.php?title=License
-; Version   $Id:$
+; Version   $Id$
 
 [irsubcategory]
 method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
-
 
 elements.category_id.type = "select"
 elements.category_id.options.label = "Category"
