--- a/application/config/form/irworkflow.form
+++ b/application/config/form/irworkflow.form
@@ -6,12 +6,10 @@
 ; Author    Nathan Harris <nathan.harris@endeavorsystems.com>
 ; Copyright (c) Endeavor Systems, Inc. 2008 (http://www.endeavorsystems.com)
 ; License   http://www.openfisma.org/mw/index.php?title=License
-; Version   $Id:$
+; Version   $Id$
 
 [irworkflow]
 method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
 
 elements.name.type = "text"
 elements.name.options.label = "Name"
