Feature request on the IR branch: OFJ-3 Incident Reporting Module
table columns have been changed to camel case... these form config files now reflect this change

--- a/application/config/form/incident.form
+++ b/application/config/form/incident.form
@@ -14,215 +14,215 @@ elementPrefixPath.path = Fisma/Form
 elementPrefixPath.type = Validate
 method = "post"
 
-elements.reporter_title.type = "text"
-elements.reporter_title.options.label = "Title"
-elements.reporter_title.options.style = "width:25px"
-displayGroups.reporter.elements.reporter_title = "reporter_title"
+elements.reporterTitle.type = "text"
+elements.reporterTitle.options.label = "Title"
+elements.reporterTitle.options.style = "width:25px"
+displayGroups.reporter.elements.reporterTitle = "reporterTitle"
 
-elements.reporter_first_name.type = "text"
-elements.reporter_first_name.options.label = "First Name"
-elements.reporter_first_name.options.style = "width:200px"
-displayGroups.reporter.elements.reporter_first_name = "reporter_first_name"
+elements.reporterFirstName.type = "text"
+elements.reporterFirstName.options.label = "First Name"
+elements.reporterFirstName.options.style = "width:200px"
+displayGroups.reporter.elements.reporterFirstName = "reporterFirstName"
 
-elements.reporter_last_name.type = "text"
-elements.reporter_last_name.options.label = "Last Name"
-elements.reporter_last_name.options.style = "width:200px"
-displayGroups.reporter.elements.reporter_last_name = "reporter_last_name"
+elements.reporterLastName.type = "text"
+elements.reporterLastName.options.label = "Last Name"
+elements.reporterLastName.options.style = "width:200px"
+displayGroups.reporter.elements.reporterLastName = "reporterLastName"
 
-elements.reporter_organization.type = "text"
-elements.reporter_organization.options.label = "Organization"
-elements.reporter_organization.options.style = "width:400px"
-displayGroups.reporter.elements.reporter_organization = "reporter_organization"
+elements.reporterOrganization.type = "text"
+elements.reporterOrganization.options.label = "Organization"
+elements.reporterOrganization.options.style = "width:400px"
+displayGroups.reporter.elements.reporterOrganization = "reporterOrganization"
 
-elements.reporter_address1.type = "text"
-elements.reporter_address1.options.label = "Address1"
-elements.reporter_address1.options.style = "width:400px"
-displayGroups.reporter.elements.reporter_address1 = "reporter_address1"
+elements.reporterAddress1.type = "text"
+elements.reporterAddress1.options.label = "Address1"
+elements.reporterAddress1.options.style = "width:400px"
+displayGroups.reporter.elements.reporterAddress1 = "reporterAddress1"
 
-elements.reporter_address2.type = "text"
-elements.reporter_address2.options.label = "Address2"
-elements.reporter_address2.options.style = "width:400px"
-displayGroups.reporter.elements.reporter_address2 = "reporter_address2"
+elements.reporterAddress2.type = "text"
+elements.reporterAddress2.options.label = "Address2"
+elements.reporterAddress2.options.style = "width:400px"
+displayGroups.reporter.elements.reporterAddress2 = "reporterAddress2"
 
-elements.reporter_city.type = "text"
-elements.reporter_city.options.label = "City"
-elements.reporter_city.options.style = "width:200px"
-displayGroups.reporter.elements.reporter_city = "reporter_city"
+elements.reporterCity.type = "text"
+elements.reporterCity.options.label = "City"
+elements.reporterCity.options.style = "width:200px"
+displayGroups.reporter.elements.reporterCity = "reporterCity"
 
-elements.reporter_state.type = "select"
-elements.reporter_state.options.label = "State"
-elements.reporter_state.options.style = "width:100px"
-displayGroups.reporter.elements.reporter_state = "reporter_state"
+elements.reporterState.type = "select"
+elements.reporterState.options.label = "State"
+elements.reporterState.options.style = "width:100px"
+displayGroups.reporter.elements.reporterState = "reporterState"
 
-elements.reporter_zip.type = "text"
-elements.reporter_zip.options.label = "Zip"
-elements.reporter_zip.options.style = "width:75px"
-displayGroups.reporter.elements.reporter_zip = "reporter_zip"
+elements.reporterZip.type = "text"
+elements.reporterZip.options.label = "Zip"
+elements.reporterZip.options.style = "width:75px"
+displayGroups.reporter.elements.reporterZip = "reporterZip"
 
-elements.reporter_phone.type = "text"
-elements.reporter_phone.options.label = "Phone"
-elements.reporter_phone.options.style = "width:150px"
-displayGroups.reporter.elements.reporter_phone = "reporter_phone"
+elements.reporterPhone.type = "text"
+elements.reporterPhone.options.label = "Phone"
+elements.reporterPhone.options.style = "width:150px"
+displayGroups.reporter.elements.reporterPhone = "reporterPhone"
 
-elements.reporter_fax.type = "text"
-elements.reporter_fax.options.label = "Fax"
-elements.reporter_fax.options.style = "width:150px"
-displayGroups.reporter.elements.reporter_fax = "reporter_fax"
+elements.reporterFax.type = "text"
+elements.reporterFax.options.label = "Fax"
+elements.reporterFax.options.style = "width:150px"
+displayGroups.reporter.elements.reporterFax = "reporterFax"
 
-elements.reporter_email.type = "text"
-elements.reporter_email.options.label = "Email"
-elements.reporter_email.options.style = "width:225px"
-displayGroups.reporter.elements.reporter_email = "reporter_email"
+elements.reporterEmail.type = "text"
+elements.reporterEmail.options.label = "Email"
+elements.reporterEmail.options.style = "width:225px"
+displayGroups.reporter.elements.reporterEmail = "reporterEmail"
 
-elements.assessment_critical.type="select"
-elements.assessment_critical.options.label="Is Incident Critical"
-displayGroups.incident.elements.assessment_critical="assessment_critical"
+elements.assessmentCritical.type="select"
+elements.assessmentCritical.options.label="Is Incident Critical"
+displayGroups.incident.elements.assessmentCritical="assessmentCritical"
 
-elements.assessment_sensitivity.type="select"
-elements.assessment_sensitivity.options.label="Incident Sensitivity"
-displayGroups.incident.elements.assessment_sensitivity="assessment_sensitivity"
+elements.assessmentSensitivity.type="select"
+elements.assessmentSensitivity.options.label="Incident Sensitivity"
+displayGroups.incident.elements.assessmentSensitivity="assessmentSensitivity"
 
-elements.incident_ts.type = "text"
-elements.incident_ts.options.label = "When did the Incident occur?"
-elements.incident_ts.options.class = "date"
-displayGroups.incident.elements.incident_ts = "incident_ts"
+elements.incidentTs.type = "text"
+elements.incidentTs.options.label = "When did the Incident occur?"
+elements.incidentTs.options.class = "date"
+displayGroups.incident.elements.incidentTs = "incidentTs"
 
-elements.incident_hour.type = "select"
-elements.incident_hour.options.label = "What time did the Incident occur?"
-displayGroups.incident.elements.incident_hour = "incident_hour"
+elements.incidentHour.type = "select"
+elements.incidentHour.options.label = "What time did the Incident occur?"
+displayGroups.incident.elements.incidentHour = "incidentHour"
 
-elements.incident_minute.type = "select"
-elements.incident_minute.options.label = "Minute"
-displayGroups.incident.elements.incident_minute = "incident_minute"
+elements.incidentMinute.type = "select"
+elements.incidentMinute.options.label = "Minute"
+displayGroups.incident.elements.incidentMinute = "incidentMinute"
 
-elements.incident_ampm.type = "select"
-elements.incident_ampm.options.label = "AM/PM"
-displayGroups.incident.elements.incident_ampm = "incident_ampm"
+elements.incidentAmpm.type = "select"
+elements.incidentAmpm.options.label = "AM/PM"
+displayGroups.incident.elements.incidentAmpm = "incidentAmpm"
 
-elements.incident_tz.type = "select"
-elements.incident_tz.options.label = "Timezone"
-displayGroups.incident.elements.incident_tz = "incident_tz"
+elements.incidentTz.type = "select"
+elements.incidentTz.options.label = "Timezone"
+displayGroups.incident.elements.incidentTz = "incidentTz"
 
 elements.classification.type = "select"
 elements.classification.options.label = "Incident Classification"
 displayGroups.incident.elements.classification = "classification"
 
-elements.additional_info.type = "textarea"
-elements.additional_info.options.validators.mce.validator = "MceNotEmpty"
-elements.additional_info.options.label = "Describe the incident"
-elements.additional_info.options.cols = "70%"
-elements.additional_info.options.rows = "7"
-elements.additional_info.options.required = true
-displayGroups.incident.elements.additional_info = "additional_info"
+elements.additionalInfo.type = "textarea"
+elements.additionalInfo.options.validators.mce.validator = "MceNotEmpty"
+elements.additionalInfo.options.label = "Describe the incident"
+elements.additionalInfo.options.cols = "70%"
+elements.additionalInfo.options.rows = "7"
+elements.additionalInfo.options.required = true
+displayGroups.incident.elements.additionalInfo = "additionalInfo"
 
-elements.actions_taken.type="textarea"
-elements.actions_taken.options.label="Describe any actions that have been taken"
-elements.actions_taken.options.cols = "70%"
-elements.actions_taken.options.rows = "7"
-displayGroups.incident.elements.actions_taken="actions_taken"
+elements.actionsTaken.type="textarea"
+elements.actionsTaken.options.label="Describe any actions that have been taken"
+elements.actionsTaken.options.cols = "70%"
+elements.actionsTaken.options.rows = "7"
+displayGroups.incident.elements.actionsTaken="actionsTaken"
 
-elements.location_building.type = "text"
-elements.location_building.options.label = "What building did the incident occur in"
-elements.location_building.options.style = "width:200px"
-displayGroups.incident.elements.location_building = "location_building"
+elements.locationBuilding.type = "text"
+elements.locationBuilding.options.label = "What building did the incident occur in"
+elements.locationBuilding.options.style = "width:200px"
+displayGroups.incident.elements.locationBuilding = "locationBuilding"
 
-elements.location_room.type = "text"
-elements.location_room.options.label = "What room did the incident occur in"
-elements.location_room.options.style = "width:200px"
-displayGroups.incident.elements.location_room = "location_room"
+elements.locationRoom.type = "text"
+elements.locationRoom.options.label = "What room did the incident occur in"
+elements.locationRoom.options.style = "width:200px"
+displayGroups.incident.elements.locationRoom = "locationRoom"
 
-elements.location_rack.type = "text"
-elements.location_rack.options.label = "What rack did the incident occur in"
-elements.location_rack.options.style = "width:200px"
-displayGroups.incident.elements.location_rack = "location_rack"
-
-
-
-elements.host_name.type="text"
-elements.host_name.options.label="Host Name"
-elements.host_name.options.style="width:200px"
-displayGroups.incident.elements.host_name="host_name"
-
-elements.host_ip.type="text"
-elements.host_ip.options.label="Host IP"
-elements.host_ip.options.style="width:125px"
-displayGroups.incident.elements.host_ip="host_ip"
-
-elements.host_os.type="select"
-elements.host_os.options.label="Host OS"
-displayGroups.incident.elements.host_os="host_os"
-
-elements.host_additional.type="textarea"
-elements.host_additional.options.label="Add additional information about the host"
-elements.host_additional.options.cols = "70%"
-elements.host_additional.options.rows = "7"
-displayGroups.incident.elements.host_additional="host_additional"
-
-elements.pii_involved.type="select"
-elements.pii_involved.options.label="Was PII involved"
-displayGroups.pii.elements.pii_involved="pii_involved"
-
-elements.pii_additional.type="textarea"
-elements.pii_additional.options.label="Describe PII"
-elements.pii_additional.options.cols = "70%"
-elements.pii_additional.options.rows = "7"
-displayGroups.pii.elements.pii_additional="pii_additional"
-
-elements.pii_mobile_media.type="select"
-elements.pii_mobile_media.options.label="Was PII stored on Mobile Media"
-displayGroups.pii.elements.pii_mobile_media="pii_mobile_media"
-
-elements.pii_mobile_media_type.type="select"
-elements.pii_mobile_media_type.options.label="What type of Mobile Media"
-displayGroups.pii.elements.pii_mobile_media_type="pii_mobile_media_type"
-
-elements.pii_encrypted.type="select"
-elements.pii_encrypted.options.label="Was PII encrypted"
-displayGroups.pii.elements.pii_encrypted="pii_encrypted"
-
-elements.pii_authorities_contacted.type="select"
-elements.pii_authorities_contacted.options.label="Were authorities contacted"
-displayGroups.pii.elements.pii_authorities_contacted="pii_authorities_contacted"
-
-elements.pii_police_report.type="select"
-elements.pii_police_report.options.label="Was a police report filed"
-displayGroups.pii.elements.pii_police_report="pii_police_report"
-
-elements.pii_individuals_count.type="text"
-elements.pii_individuals_count.options.label="Home many individuals were affected"
-elements.pii_individuals_count.options.style="width:100px"
-displayGroups.pii.elements.pii_individuals_count="pii_individuals_count"
-
-elements.pii_individuals_notification.type="select"
-elements.pii_individuals_notification.options.label="Were affected individuals contacted"
-displayGroups.pii.elements.pii_individuals_notification="pii_individuals_notification"
-
-elements.pii_shipment.type="select"
-elements.pii_shipment.options.label="Was PII in a shipment"
-displayGroups.pii.elements.pii_shipment="pii_shipment"
-
-elements.pii_shipment_sender_company.type="text"
-elements.pii_shipment_sender_company.options.label="What company handled the shipment"
-elements.pii_shipment_sender_company.options.style="width:100px"
-displayGroups.pii.elements.pii_shipment_sender_company="pii_shipment_sender_company"
-
-elements.pii_shipment_sender_contact.type="select"
-elements.pii_shipment_sender_contact.label="l"
-elements.pii_shipment_sender_contact.options.label="Was the shipping company contacted"
-displayGroups.pii.elements.pii_shipment_sender_contact="pii_shipment_sender_contact"
+elements.locationRack.type = "text"
+elements.locationRack.options.label = "What rack did the incident occur in"
+elements.locationRack.options.style = "width:200px"
+displayGroups.incident.elements.locationRack = "locationRack"
 
 
-elements.pii_shipment_timeline.type="textarea"
-elements.pii_shipment_timeline.options.label="Describe Shipment Timeline"
-elements.pii_shipment_timeline.options.cols = "70%"
-elements.pii_shipment_timeline.options.rows = "7"
-displayGroups.pii.elements.pii_shipment_timeline="pii_shipment_timeline"
 
-elements.pii_shipment_tracking_numbers.type="textarea"
-elements.pii_shipment_tracking_numbers.options.label="Tracking Numbers"
-elements.pii_shipment_tracking_numbers.options.cols = "70%"
-elements.pii_shipment_tracking_numbers.options.rows = "7"
-displayGroups.pii.elements.pii_shipment_tracking_numbers="pii_shipment_tracking_numbers"
+elements.hostName.type="text"
+elements.hostName.options.label="Host Name"
+elements.hostName.options.style="width:200px"
+displayGroups.incident.elements.hostName="hostName"
+
+elements.hostIp.type="text"
+elements.hostIp.options.label="Host IP"
+elements.hostIp.options.style="width:125px"
+displayGroups.incident.elements.hostIp="hostIp"
+
+elements.hostOs.type="select"
+elements.hostOs.options.label="Host OS"
+displayGroups.incident.elements.hostOs="hostOs"
+
+elements.hostAdditional.type="textarea"
+elements.hostAdditional.options.label="Add additional information about the host"
+elements.hostAdditional.options.cols = "70%"
+elements.hostAdditional.options.rows = "7"
+displayGroups.incident.elements.hostAdditional="hostAdditional"
+
+elements.piiInvolved.type="select"
+elements.piiInvolved.options.label="Was PII involved"
+displayGroups.pii.elements.piiInvolved="piiInvolved"
+
+elements.piiAdditional.type="textarea"
+elements.piiAdditional.options.label="Describe PII"
+elements.piiAdditional.options.cols = "70%"
+elements.piiAdditional.options.rows = "7"
+displayGroups.pii.elements.piiAdditional="piiAdditional"
+
+elements.piiMobileMedia.type="select"
+elements.piiMobileMedia.options.label="Was PII stored on Mobile Media"
+displayGroups.pii.elements.piiMobileMedia="piiMobileMedia"
+
+elements.piiMobileMediaType.type="select"
+elements.piiMobileMediaType.options.label="What type of Mobile Media"
+displayGroups.pii.elements.piiMobileMediaType="piiMobileMediaType"
+
+elements.piiEncrypted.type="select"
+elements.piiEncrypted.options.label="Was PII encrypted"
+displayGroups.pii.elements.piiEncrypted="piiEncrypted"
+
+elements.piiAuthoritiesContacted.type="select"
+elements.piiAuthoritiesContacted.options.label="Were authorities contacted"
+displayGroups.pii.elements.piiAuthoritiesContacted="piiAuthoritiesContacted"
+
+elements.piiPoliceReport.type="select"
+elements.piiPoliceReport.options.label="Was a police report filed"
+displayGroups.pii.elements.piiPoliceReport="piiPoliceReport"
+
+elements.piiIndividualsCount.type="text"
+elements.piiIndividualsCount.options.label="Home many individuals were affected"
+elements.piiIndividualsCount.options.style="width:100px"
+displayGroups.pii.elements.piiIndividualsCount="piiIndividualsCount"
+
+elements.piiIndividualsNotification.type="select"
+elements.piiIndividualsNotification.options.label="Were affected individuals contacted"
+displayGroups.pii.elements.piiIndividualsNotification="piiIndividualsNotification"
+
+elements.piiShipment.type="select"
+elements.piiShipment.options.label="Was PII in a shipment"
+displayGroups.pii.elements.piiShipment="piiShipment"
+
+elements.piiShipmentSenderCompany.type="text"
+elements.piiShipmentSenderCompany.options.label="What company handled the shipment"
+elements.piiShipmentSenderCompany.options.style="width:100px"
+displayGroups.pii.elements.piiShipmentSenderCompany="piiShipmentSenderCompany"
+
+elements.piiShipmentSenderContact.type="select"
+elements.piiShipmentSenderContact.label="l"
+elements.piiShipmentSenderContact.options.label="Was the shipping company contacted"
+displayGroups.pii.elements.piiShipmentSenderContact="piiShipmentSenderContact"
+
+
+elements.piiShipmentTimeline.type="textarea"
+elements.piiShipmentTimeline.options.label="Describe Shipment Timeline"
+elements.piiShipmentTimeline.options.cols = "70%"
+elements.piiShipmentTimeline.options.rows = "7"
+displayGroups.pii.elements.piiShipmentTimeline="piiShipmentTimeline"
+
+elements.piiShipmentTrackingNumbers.type="textarea"
+elements.piiShipmentTrackingNumbers.options.label="Tracking Numbers"
+elements.piiShipmentTrackingNumbers.options.cols = "70%"
+elements.piiShipmentTrackingNumbers.options.rows = "7"
+displayGroups.pii.elements.piiShipmentTrackingNumbers="piiShipmentTrackingNumbers"
 
 elements.save.type = "Form_Button_Submit"
 elements.save.options.value = "Report Incident"
